--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -5,6 +5,7 @@ itsdangerous==0.24
 Jinja2==2.9.4
 MarkupSafe==0.23
 pytz==2016.10
+simplejson==3.10.0
 six==1.10.0
 twilio==5.6.0
 Werkzeug==0.11.15
